fix: change config and lint fix

--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,7 @@
 	"singleQuote": false,
 	"printWidth": 500,
 	"tabWidth": 2,
-	"endOfLine": "auto"
+	"endOfLine": "auto",
+	"trailingComma": "none",
+	"arrowParens": "avoid"
 }
