--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
 	},
 	"license": "MIT",
 	"scripts": {
-		"start": "cross-env-shell NODE_ENV=production npx babel-node -r module-alias/register ./bin/www | cross-env-shell NODE_ENV=production rotate-logs --config=$INIT_CWD/src/configs/app-log.config.js | cross-env-shell NODE_ENV=production rotate-logs --config=$INIT_CWD/src/configs/http-request-log.config.js",
-		"dev": "cross-env-shell NODE_ENV=development nodemon --exec npx babel-node -r module-alias/register ./bin/www",
-		"debug": "cross-env-shell NODE_ENV=development npx babel-node -r module-alias/register ./bin/www",
+		"start": "cross-env-shell NODE_ENV=production npx babel-node ./bin/www | cross-env-shell NODE_ENV=production rotate-logs --config=$INIT_CWD/src/configs/app-log.config.js | cross-env-shell NODE_ENV=production rotate-logs --config=$INIT_CWD/src/configs/http-request-log.config.js",
+		"dev": "cross-env-shell NODE_ENV=development nodemon --exec npx babel-node ./bin/www",
+		"debug": "cross-env-shell NODE_ENV=development npx babel-node ./bin/www",
 		"prepare": "husky install",
 		"commit": "cz",
 		"lint": "eslint . --ext .js",
@@ -47,7 +47,6 @@
 		"http-status-codes": "^2.1.4",
 		"joi": "^17.4.0",
 		"jsonwebtoken": "^8.5.1",
-		"module-alias": "^2.2.2",
 		"multer": "^1.4.2",
 		"mysql2": "^2.3.3",
 		"nodemailer": "^6.4.11",
@@ -77,12 +76,11 @@
 		"pino-pretty": "^5.1.1",
 		"prettier": "^2.5.1"
 	},
-	"_moduleAliases": {
-		"@": ".",
-		"@configs": "src/configs",
-		"@constants": "src/constants",
-		"@helpers": "src/helpers",
-		"@middlewares": "src/middlewares",
-		"@utils": "src/utils"
+	"imports": {
+		"#configs/*": "./src/configs/*.js",
+		"#constants/*": "./src/constants/*.js",
+		"#helpers/*": "./src/helpers/*.js",
+		"#middlewares/*": "./src/middlewares/*.js",
+		"#utils/*": "./src/utils/*.js"
 	}
 }
