feat: change server start config

--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
 	},
 	"license": "MIT",
 	"scripts": {
-		"start": "cross-env-shell NODE_ENV=production npx babel-node ./bin/www | cross-env-shell NODE_ENV=production rotate-logs --config=$INIT_CWD/src/configs/app-log.config.js | cross-env-shell NODE_ENV=production rotate-logs --config=$INIT_CWD/src/configs/http-request-log.config.js",
-		"dev": "cross-env-shell NODE_ENV=development nodemon --exec npx babel-node ./bin/www",
-		"debug": "cross-env-shell NODE_ENV=development npx babel-node ./bin/www",
+		"start": "cross-env-shell NODE_ENV=production npx babel-node src/index.js | cross-env-shell NODE_ENV=production rotate-logs --config=$INIT_CWD/src/configs/app-log.config.js | cross-env-shell NODE_ENV=production rotate-logs --config=$INIT_CWD/src/configs/http-request-log.config.js",
+		"dev": "cross-env-shell NODE_ENV=development nodemon --exec npx babel-node src/index.js",
+		"debug": "cross-env-shell NODE_ENV=development npx babel-node src/index.js",
 		"prepare": "husky install",
 		"commit": "cz",
 		"lint": "eslint . --ext .js",
@@ -31,18 +31,18 @@
 	"dependencies": {
 		"@vrbo/pino-rotating-file": "^3.0.0",
 		"bcrypt": "^5.0.1",
-		"cookie-parser": "~1.4.4",
+		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"crypto-js": "^4.0.0",
 		"db-migrate": "^0.11.13",
 		"db-migrate-mysql8": "^1.0.1",
 		"debug": "~2.6.9",
 		"dotenv": "^11.0.0",
-		"express": "~4.16.1",
+		"express": "^4.17.2",
 		"express-pino-logger": "^5.0.0",
 		"google-libphonenumber": "^3.2.26",
 		"handlebars": "^4.7.7",
-		"helmet": "^4.6.0",
+		"helmet": "^5.0.2",
 		"http-errors": "~1.6.3",
 		"http-status-codes": "^2.1.4",
 		"joi": "^17.4.0",
